force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Post_Start_Weight__c.field-meta.xml
<CustomField>
    <fullName>IT_Post_Start_Weight__c</fullName>
    <formula>IF( 
IT_Cluster_Welfare__c =&quot;D&quot;,0.5, 
IF( 
IT_Cluster_Welfare__c =&quot;C&quot;,0.75, 
IF( 
IT_Cluster_Welfare__c =&quot;B&quot;,1.13, 
IF( 
IT_Cluster_Welfare__c =&quot;A1&quot;,1.81, 
IF( 
IT_Cluster_Welfare__c =&quot;A2&quot;,2.5, 
IF( 
IT_Cluster_Welfare__c =&quot;S1&quot;,3.5, 
4.75 
))))))</formula>
    <label>Post Start Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>