force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Poster__c.field-meta.xml
<CustomField>
    <fullName>IT_Poster__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Poster</label>
    <type>Checkbox</type>
</CustomField>