force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Pre_Start_Weight__c.field-meta.xml
<CustomField>
    <fullName>IT_Pre_Start_Weight__c</fullName>
    <formula>IF( 
IT_Cluster_Welfare__c =&quot;D&quot;,0.38, 
IF( 
IT_Cluster_Welfare__c =&quot;C&quot;,0.44, 
IF( 
IT_Cluster_Welfare__c =&quot;B&quot;,0.63, 
IF( 
IT_Cluster_Welfare__c =&quot;A1&quot;,0.88, 
IF( 
IT_Cluster_Welfare__c =&quot;A2&quot;,1.44, 
IF( 
IT_Cluster_Welfare__c =&quot;SA1&quot;,2.5, 
3.94 
))))))</formula>
    <label>Pre Start Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>