force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Project_board__c.field-meta.xml
<CustomField>
    <fullName>IT_Project_board__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Project board</label>
    <type>Checkbox</type>
</CustomField>