force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>IT_Project_End_Date__c</fullName>
    <label>Project End date</label>
    <type>Date</type>
</CustomField>