force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Project_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Client</fullName>
            </value>
            <value>
                <fullName>New Plan existing Client</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>