force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Referent_presence_at_meetings__c.field-meta.xml
<CustomField>
    <fullName>IT_Referent_presence_at_meetings__c</fullName>
    <inlineHelpText>Specificare se sarà presente a tutti gli incontri o in quali, se è prevista un’introduzione del referente e/o altri tipi di interventi</inlineHelpText>
    <label>Referent presence at meetings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>