force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Replacement__c.field-meta.xml
<CustomField>
    <fullName>IT_Replacement__c</fullName>
    <label>Replacement</label>
    <type>TextArea</type>
</CustomField>