force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>IT_Sales_Manager__c</fullName>
    <label>Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AMOROSO EMANUELA</fullName>
            </value>
            <value>
                <fullName>BARBIERO MATTEO</fullName>
            </value>
            <value>
                <fullName>BONOMO TULLIO</fullName>
            </value>
            <value>
                <fullName>CALANNI MARIA ELENA</fullName>
            </value>
            <value>
                <fullName>CERCIELLO FRANCESCA</fullName>
            </value>
            <value>
                <fullName>CORTI CLAUDIA</fullName>
            </value>
            <value>
                <fullName>DE LUCIA RAFFAELE</fullName>
            </value>
            <value>
                <fullName>DI FRONZO MARCO</fullName>
            </value>
            <value>
                <fullName>FINA MAURILLIO</fullName>
            </value>
            <value>
                <fullName>GALLI ALISIA</fullName>
            </value>
            <value>
                <fullName>HABAZAJ ELMIRA</fullName>
            </value>
            <value>
                <fullName>IACONA MIRKO</fullName>
            </value>
            <value>
                <fullName>MANFRIN GIORGIA</fullName>
            </value>
            <value>
                <fullName>MAURILLIO FINA</fullName>
            </value>
            <value>
                <fullName>MENESCALDI ANDREA</fullName>
            </value>
            <value>
                <fullName>MIGLIORATO SIMONE</fullName>
            </value>
            <value>
                <fullName>MISSERE GIUSY</fullName>
            </value>
            <value>
                <fullName>MONTORFANO SIMONE</fullName>
            </value>
            <value>
                <fullName>NANI ETTORE</fullName>
            </value>
            <value>
                <fullName>PELLEGRINI LORENZA</fullName>
            </value>
            <value>
                <fullName>PINATO STEFANO</fullName>
            </value>
            <value>
                <fullName>RANIERI ADOLFO</fullName>
            </value>
            <value>
                <fullName>RIMOLDI DANIELE</fullName>
            </value>
            <value>
                <fullName>SALA MARCELLA</fullName>
            </value>
            <value>
                <fullName>STRIPPARO DONATELLA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>