force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Sanitary_Cash_Activation_Form__c.field-meta.xml
<CustomField>
    <fullName>IT_Sanitary_Cash_Activation_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanitary Cash Activation Form</label>
    <type>Checkbox</type>
</CustomField>