force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_SFTP_DSP__c.field-meta.xml
<CustomField>
    <fullName>IT_SFTP_DSP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SFTP (DSP)</label>
    <type>Checkbox</type>
</CustomField>