force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_SFTP_Flow_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_SFTP_Flow_Type__c</fullName>
    <label>SFTP Flow Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>IT_SFTP_DSP__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Input path</fullName>
            </value>
            <value>
                <fullName>Output Flow</fullName>
            </value>
            <value>
                <fullName>Input Path e Output Flow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>