force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Single_sign_on_SSO__c.field-meta.xml
<CustomField>
    <fullName>IT_Single_sign_on_SSO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Single sign-on (SSO)</label>
    <type>Checkbox</type>
</CustomField>