force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Split_Payment__c.field-meta.xml
<CustomField>
    <fullName>IT_Split_Payment__c</fullName>
    <formula>IT_Account__r.IT_Split_Payment__c</formula>
    <label>Split Payment</label>
    <type>Checkbox</type>
</CustomField>