force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Splitted_Billing_for_CDC__c.field-meta.xml
<CustomField>
    <fullName>IT_Splitted_Billing_for_CDC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Splitted Billing for CDC</label>
    <type>Checkbox</type>
</CustomField>