force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Storage_Type__c.field-meta.xml
<CustomField>
    <fullName>IT_Storage_Type__c</fullName>
    <label>Storage Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CD</fullName>
            </value>
            <value>
                <fullName>Storage without timestamp</fullName>
            </value>
            <value>
                <fullName>Storage with timestamp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>