force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Support_Tools_low_digitalisation__c.field-meta.xml
<CustomField>
    <fullName>IT_Support_Tools_low_digitalisation__c</fullName>
    <inlineHelpText>Indicare se saranno erogati strumenti a supporto e.g. welfare point, pc/totem in azienda, supporto interno,…</inlineHelpText>
    <label>Support Tools (low digitalisation)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>