force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Syndacate_Component__c.field-meta.xml
<CustomField>
    <fullName>IT_Syndacate_Component__c</fullName>
    <inlineHelpText>Indicare presenza del sindacato in azienda, sigle coinvolte, livello di coinvolgimento nel progetto welfare, posizione rispetto al progetto</inlineHelpText>
    <label>Syndacate Component</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>