force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Syndacate_presence_at_meetings__c.field-meta.xml
<CustomField>
    <fullName>IT_Syndacate_presence_at_meetings__c</fullName>
    <inlineHelpText>Specificare se sarà presente a tutti gli incontri o in quali</inlineHelpText>
    <label>Syndacate presence at meetings</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>