force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Team__c.field-meta.xml
<CustomField>
    <fullName>IT_Team__c</fullName>
    <formula>Owner:User.UserRole.Name</formula>
    <label>Team</label>
    <type>Text</type>
</CustomField>