force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Trainer__c.field-meta.xml
<CustomField>
    <fullName>IT_Trainer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trainer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Welfare Project (Trainer)</relationshipLabel>
    <relationshipName>Welfare_Project1</relationshipName>
    <type>Lookup</type>
</CustomField>