force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Tutorial_Video_and_Guides__c.field-meta.xml
<CustomField>
    <fullName>IT_Tutorial_Video_and_Guides__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tutorial Video and Guides</label>
    <type>Checkbox</type>
</CustomField>