force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Type_Communication_Plan__c.field-meta.xml
<CustomField>
    <fullName>IT_Type_Communication_Plan__c</fullName>
    <label>Type Communication Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Personalized</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>