force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Unique_Billing__c.field-meta.xml
<CustomField>
    <fullName>IT_Unique_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unique Billing</label>
    <type>Checkbox</type>
</CustomField>