force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Welfare_experience__c.field-meta.xml
<CustomField>
    <fullName>IT_Welfare_experience__c</fullName>
    <label>Welfare experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First experience</fullName>
            </value>
            <value>
                <fullName>Previous experience with Edenred platform</fullName>
            </value>
            <value>
                <fullName>Previous experience with competitor platform</fullName>
            </value>
            <value>
                <fullName>Previous experience with Edenred vouchers</fullName>
            </value>
            <value>
                <fullName>Previous experience with competitor vouchers</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>