force-app/main/default/objects/IT_Welfare_Project__c/fields/IT_Welfare_Point_Number__c.field-meta.xml
<CustomField>
    <fullName>IT_Welfare_Point_Number__c</fullName>
    <label>Welfare Point Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>