force-app/main/default/objects/IT_Welfare_Project__c/validationRules/VRIT01_Welfare_Project_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT01_Welfare_Project_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				IT_Project_End_Date__c  &lt;  IT_Project_Start_Date__c,
							$User.ER_BypassVR__c = False,
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;))</errorConditionFormula>
    <errorMessage>Project End Date must be after Project Start Date</errorMessage>
</ValidationRule>