force-app/main/default/objects/IT_Welfare_Project__c/validationRules/VRIT02_Welfare_Project_GoLive_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>VRIT02_Welfare_Project_GoLive_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(IT_Go_Live_Project_Date__c &lt; IT_Project_Start_Date__c,
		IT_Go_Live_Project_Date__c &gt;		IT_Project_End_Date__c), 
ISPICKVAL($User.ER_Business_Unit__c , &#39;IT&#39;),
$User.ER_BypassVR__c = False
)</errorConditionFormula>
    <errorMessage>Go Live Date must be between Project Start Date and Project End Date</errorMessage>
</ValidationRule>