force-app/main/default/objects/IT_Welfare_Project__c/listViews/Progetti_Personali.listView-meta.xml
<ListView>
    <fullName>Progetti_Personali</fullName>
    <columns>NAME</columns>
    <columns>IT_Circuit__c</columns>
    <columns>IT_Go_Live_Project_Date__c</columns>
    <columns>OWNER.ALIAS</columns>
    <columns>IT_Max_Plan_End_Date__c</columns>
    <columns>IT_Project_End_Date__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>IT_Number_of_Plans__c</columns>
    <filterScope>Mine</filterScope>
    <label>Progetti Personali</label>
</ListView>